--- a/src/main/resources/static/app/sensorrules/sensorRuleInstallation.html
+++ b/src/main/resources/static/app/sensorrules/sensorRuleInstallation.html
@@ -6,11 +6,11 @@
 		<div class="card card-wizard" data-color="primary" id="wizardProfile">
 			<form action="" method="">
 				
-				<div ng-include="'setup/rules/sensorRuleInstallationWizardHeader.html'" include-replace></div>	
+				<div ng-include="'../sensorrules/sensorRuleInstallationWizardHeader.html'" include-replace></div>	
 
-				<div ng-include="'setup/rules/sensorRuleInstallationWizardContent.html'" include-replace></div>
+				<div ng-include="'../sensorrules/sensorRuleInstallationWizardContent.html'" include-replace></div>
 				
-				<div ng-include="'setup/rules/sensorRuleInstallationWizardFooter.html'" include-replace></div>
+				<div ng-include="'../sensorrules/sensorRuleInstallationWizardFooter.html'" include-replace></div>
 	
 
 			</form>
