--- a/src/main/resources/static/app/dashboard/dashboard.html
+++ b/src/main/resources/static/app/dashboard/dashboard.html
@@ -98,6 +98,7 @@ Coded by www.creative-tim.com
 		<script type="text/javascript" src="/app/devices/transductors/actuators/controllers/InstallActuatorController.js"></script>
 		<script type="text/javascript" src="/app/devices/transductors/actuators/services/ActuatorAPIService.js"></script>
 		<script type="text/javascript" src="/app/devices/transductors/actuators/entities/Actuator.js"></script>
+		<script type="text/javascript" src="/app/devices/transductors/actuators/entities/ActuatorValues.js"></script>
 		<script type="text/javascript" src="/app/devices/transductors/actuators/entities/ActuatorValue.js"></script>
 
 		<!-- Notifications -->
