--- a/src/main/resources/static/app/charts/chartInstallation.html
+++ b/src/main/resources/static/app/charts/chartInstallation.html
@@ -6,11 +6,11 @@
 		<div class="card card-wizard" data-color="primary" id="wizardProfile">
 			<form action="" method="">
 				
-				<div ng-include="'setup/chart/chartInstallationWizardHeader.html'" include-replace></div>	
+				<div ng-include="'../charts/chartInstallationWizardHeader.html'" include-replace></div>	
 
-				<div ng-include="'setup/chart/chartInstallationWizardContent.html'" include-replace></div>
+				<div ng-include="'../charts/chartInstallationWizardContent.html'" include-replace></div>
 				
-				<div ng-include="'setup/chart/chartInstallationWizardFooter.html'" include-replace></div>
+				<div ng-include="'../charts/chartInstallationWizardFooter.html'" include-replace></div>
 	
 
 			</form>
