--- a/src/main/resources/static/app/dashboard/shared/sidebarNav.html
+++ b/src/main/resources/static/app/dashboard/shared/sidebarNav.html
@@ -90,7 +90,7 @@
           <li>
             <a href="#/systemInformation">
               <i class="nc-icon nc-alert-circle-i"></i>
-              <p>Information</p>
+              <p>System</p>
             </a>
           </li>
           <li>
