--- a/src/main/resources/static/app/devices/cameras/cameraInstallation.html
+++ b/src/main/resources/static/app/devices/cameras/cameraInstallation.html
@@ -6,11 +6,11 @@
 		<div class="card card-wizard" data-color="primary" id="wizardProfile">
 			<form action="" method="">
 				
-				<div ng-include="'setup/camera/cameraInstallationWizardHeader.html'" include-replace></div>	
+				<div ng-include="'../devices/cameras/cameraInstallationWizardHeader.html'" include-replace></div>	
 
-				<div ng-include="'setup/camera/cameraInstallationWizardContent.html'" include-replace></div>
+				<div ng-include="'../devices/cameras/cameraInstallationWizardContent.html'" include-replace></div>
 				
-				<div ng-include="'setup/camera/cameraInstallationWizardFooter.html'" include-replace></div>
+				<div ng-include="'../devices/cameras/cameraInstallationWizardFooter.html'" include-replace></div>
 	
 
 			</form>
