--- a/src/main/resources/static/app/devices/cameras/cameraInstallationWizardContent.html
+++ b/src/main/resources/static/app/devices/cameras/cameraInstallationWizardContent.html
@@ -24,7 +24,7 @@
 				<div class="col-lg-10">
 					<div class="row">
 						<div class="col-sm"
-							ng-repeat="supportedInterface in InstallCameraController.getSupportedInterfaces()">
+							ng-repeat="supportedInterface in InstallCameraController.supportedInterfaces">
 							<div class="choice" data-toggle="wizard-radio" ng-class="{active : supportedInterface === InstallCameraController.camera.getInterfaceType()}" 
 							ng-click="InstallCameraController.setCameraInterfaceType(supportedInterface)">
 								<input type="radio"   name="selectedInterface" ng-value="supportedInterface">
@@ -34,7 +34,7 @@
 								<h6>{{supportedInterface}}</h6>
 							</div>
 						</div>
-						<div ng-if="!InstallCameraController.getSupportedInterfaces().length" class="col-sm" style="text-align: center;">
+						<div ng-if="!InstallCameraController.supportedInterfaces.length" class="col-sm" style="text-align: center;">
 							<h3 class="description">No available interfaces</h3>
 						</div>
 					</div>
@@ -67,7 +67,7 @@
 	                        data-dropup-auto="false" data-max-options="1" 
 							title="Select" data-header="Wacthdog interval" data-size="12">
 								<option
-									ng-repeat="watchdogIntervalOption in InstallCameraController.getSupportedWatchdogIntervals()"
+									ng-repeat="watchdogIntervalOption in InstallCameraController.supportedWatchdogIntervals"
 									ng-value="watchdogIntervalOption">{{watchdogIntervalOption}}</option>
 								<option style="display:none" value=""></option>
 	                        </select>
