--- a/src/main/resources/static/app/dashboard/dashboard.html
+++ b/src/main/resources/static/app/dashboard/dashboard.html
@@ -50,6 +50,8 @@ Coded by www.creative-tim.com
 		<script src="/app/libraries/plugins/jquery.validate.min.js"></script>
 		<script src="/app/libraries/plugins/bootstrap-selectpicker.js"></script>
 		<script src="/app/libraries/plugins/sweetalert2.min.js"></script>
+		<script src="/app/libraries/plugins/wizard.js"></script>
+
 		
 		<!-- Application module config (SPA routes, dependencies injection) -->
 		<script type="text/javascript" src="/app/app.js"></script>
