--- a/src/main/resources/static/app/sensorrules/sensorrules.html
+++ b/src/main/resources/static/app/sensorrules/sensorrules.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="col-md-10 offset-1">
-    	<div ng-include="'alarmsensorrulespanel.html'" include-replace></div>
-      	<div ng-include="'enablerulerulespanel.html'" include-replace></div>
-      	<div ng-include="'triggeractuatorsensorrulespanel.html'" include-replace></div>
-      	<div ng-include="'camerasensorrulespanel.html'" include-replace></div>	
+    	<div ng-include="'../sensorrules/alarmsensorrulespanel.html'" include-replace></div>
+      	<div ng-include="'../sensorrules/enablerulerulespanel.html'" include-replace></div>
+      	<div ng-include="'../sensorrules/triggeractuatorsensorrulespanel.html'" include-replace></div>
+      	<div ng-include="'../sensorrules/camerasensorrulespanel.html'" include-replace></div>	
     </div>
 </div>
