--- a/src/main/resources/static/app/dashboard/shared/sidebarNav.html
+++ b/src/main/resources/static/app/dashboard/shared/sidebarNav.html
@@ -50,7 +50,7 @@
           <li>
             <a data-toggle="collapse" data-target="#setupList">
               <i class="nc-icon nc-settings"></i>
-              <p>Setup<b class="caret"></b></p>
+              <p>Install<b class="caret"></b></p>
             </a>
             <div class="collapse" id="setupList">
               <ul class="nav">
