--- a/src/main/resources/static/app/dashboard/shared/sidebarNav.html
+++ b/src/main/resources/static/app/dashboard/shared/sidebarNav.html
@@ -99,4 +99,10 @@
               <p>Power Off</p>
             </a>
           </li>
+          <li>
+            <a href="/logout">
+              <i class="nc-icon nc-user-run"></i>
+              <p>Logout</p>
+            </a>
+          </li>
         </ul>
