--- a/src/main/resources/static/app/charts/charts.html
+++ b/src/main/resources/static/app/charts/charts.html
@@ -2,7 +2,7 @@
 	<div class="col-md-10 offset-1">
 		<div class="card">
 			<div class="card-header">
-				<h5 class="card-title">Charts data</h5>
+				<h5 class="card-title">Charts visualization</h5>
 				<h5 class="card-category">No charts to show</h5>
 			</div>
 		</div>
