--- a/src/main/resources/static/app/dashboard/shared/sidebarNav.html
+++ b/src/main/resources/static/app/dashboard/shared/sidebarNav.html
@@ -44,7 +44,7 @@
           <li>
             <a href="#/sensorRules">
               <i class="nc-icon nc-paper"></i>
-              <p>Sensor Rules</p>
+              <p>Rules</p>
             </a>
           </li>
           <li>
